# chat-web-app-rust

./: Cargo.toml  README.md
src/: chat.html  dto.rs  handler.rs  index.html  main.rs  room.html  service.rs
src/libs/: cache.rs  mod.rs  token.rs
