[package]
name = "chat-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7", features = ["ws"]}
tokio = {version = "1.48.0", features = ["full"]}
anyhow = "1.0.100"
log = {version = "0.4.28"}
futures = {version = "0.3.31"}
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
validator = {version = "0.20.0", features = ["derive"]}
rand = {version = "0.9.2"}
